assets/scss/_styles_project.scss
@import "fonts_project.scss";
@import "content_project.scss";
@import "image-modal_project.scss";
@import "elements_project.scss";
@import "footer_project.scss";
@import "variables_project.scss";
@import "landing_project.scss";
@import "_navbar_project.scss";
@import "tax_project.scss";
@import "search_project.scss";
@import "_videos_project.scss";
@import "subscription.scss";
@import "rest-api-reference.scss";
@import "_video-landing_project.scss";
@import "elements_project";
@import "summary.scss";
@import "_kanvas-corner-popup.scss";
@import "_resizable.scss";
@import "_resizable-bootstrap-overrides.scss";

// Page Layout Sections
.td-home {
  background-color: $dark;
  overflow-x: hidden;
}

// .td-cover-block--height-full {
//   min-height: 90vh;

// }

//main sections
.td-outer {
  margin-top: 0;
}

.td-main main {
  @include media-breakpoint-up(md) {
    // `body` already reserves 5.5rem to clear the fixed navbar (see below), so
    // this is just breathing room beneath it - not navbar clearance. The former
    // 4rem stacked on top of the body padding and pushed content ~64px down on
    // every docs page, leaving a large blank band above the content.
    padding-top: 1.5rem;
    padding-left: 1rem;
    padding-right: 1rem;
  }
}

body {
  overflow-x: hidden;
  padding-top: 5.5rem;
}

// Main Middle Body
.td-content {
  h2 {
    color: $casper;
  }

  // Inline code
  p code,
  li>code,
  table code {
    color: inherit;
    padding: 0.2em 0.4em;
    margin: 0;
    font-size: 85%;
    word-break: normal;
    background-color: rgba($black, 0.05);
    border-radius: $border-radius;

    br {
      display: none;
    }
  }

  // Code blocks
  pre {
    word-wrap: normal;
    background-color: $gray-900;
    padding: $spacer;
    overflow-x: auto;
    max-width: 100%;

    >code {
      background-color: inherit !important;
      padding: 0;
      margin: 0;
      font-size: 100%;
      word-break: normal;
      white-space: pre;
      border: 0;
    }
  }

  .highlight {
    overflow-x: auto;
    max-width: 100%;
  }

  img,
  .md__image img,
  img.md-image-responsive {
    display: block;
    width: auto;
    max-width: clamp(320px, 100%, 700px);
    height: auto;
    margin: 0 auto;
    object-fit: contain;
    box-sizing: border-box;
  }

  overflow-x: hidden;
}
.td-content .card img {
  width: 100% ;
}

// Links

a {
  color: $primary;
  text-decoration: none;
}

a:hover {
  color: $white;
}

a:not([href]):not([class]),
a:not([href]):not([class]):hover {
  color: inherit;
  text-decoration: none;
}

// Taxonomy
.article-meta-bg {
  background-color: $gray-900;
  padding: 0.5rem;
  padding-left: 1rem;
}

.taxonomy {
  // .taxonomy-terms-cloud

  .taxonomy-term {

    border-width: 0;
    border-radius: 0 3px 3px 0;
    display: inline-block;
    font-size: 1em;
    line-height: 1.5em;
    min-height: 1.5em;
    max-width: 100%;
    padding: 0 0.5em 0 1em;
    position: relative;
    margin: 0 0.5em 0.2em 0;
    text-decoration: none;
    transition: color 0.2s;
    clip-path: polygon(100% 0, 100% 100%, 0.8em 100%, 0 50%, 0.8em 0);


    &:hover {
      background-color: $primary;
      color: $white;

    }

  }

  .article-teaser {
    &.card {
      padding: 1em;
      margin-bottom: 1.5em;
      background-color: $dark;
    }

    .breadcrumb {
      margin-bottom: 0em;
      font-size: 0.85rem;
    }

    .article-meta-bg {
      margin-bottom: 0em;
    }
  }
}

// Footer
.td-footer {
  background-color: $black;
  // bottom: 0%;
  z-index: 5;
}

.td-sidebar {
  background-image: linear-gradient(to top,
      #1e2117,
      #1d1912,
      #18120e,
      #0f0a09,
      #000000);
  position: sticky;
  height: calc(100vh - 5.5rem);
  top: 5.5rem;
  overflow-y: auto;
  padding-top: $sidebar-padding-vertical;
  padding-left: 0.5rem;
  margin-top: 0;
  overflow-x: hidden;
  &__inner {
    @include media-breakpoint-up(md) {
      @supports (position: sticky) {
        position: static;
      }
    }
  }
}

.td-sidebar #td-sidebar-menu,
.td-sidebar .td-sidebar__search {
  padding-top: 0;
  margin-top: 0;
}

@media screen and (max-width: 768px) {
  .td-sidebar {
    position: relative;
    height: auto;
    top: 0;
    padding-top: 0;
  }
}

// Left sidebar
.td-sidebar-nav {
  max-height: none;
  overflow: visible;
  padding: 0;

  &.td-sidebar-nav--search-disabled {
    @include media-breakpoint-up(lg) {
      padding-top: 0;
    }
  }

  &__section-title {
    a {
      color: $gray-400;
      font-weight: $font-weight-bold;
    }
  }

  .td-sidebar-link {
    &__page {
      color: $gray-400;
      font-weight: $font-weight-light;
    }

    &__section {
      margin-top: 0.5rem;
      font-family:
        "Qanelas Soft",
        sans-serif,
        -apple-system,
        BlinkMacSystemFont,
        "Segoe UI",
        Roboto,
        "Helvetica Neue",
        Arial,
        "Apple Color Emoji",
        "Segoe UI Emoji",
        "Segoe UI Symbol";
    }
  }

  a {
    &:hover {
      color: $white;
      text-decoration: none;
    }

    &.active:not(.tree-root) {
      border-width: 1px;
      border-style: solid;
      border-image: linear-gradient(to left,
          rgba($dark, 0) 30%,
          rgba($primary, 0.3) 60%,
          $primary 90% 100%) 1;
      background-image: linear-gradient(to left,
          rgba($dark, 0.2) 30%,
          rgba($primary, 0.3) 60%,
          $primary 90% 100%) 1;
      padding: 0.25rem;
      padding-left: 0.5rem !important;
      // background-image: linear-gradient(to left, rgba($dark,.33),rgba($dark,.5),rgba($dark,.75),#1e2117, #31412b, #3b6447, #378b6d, #00b39f);
      // background-color: rgba($primary, .05);
      color: $secondary;
    }

    &.active.tree-root {
      border: 2px solid $lightslategray !important;
      padding: 0.25rem;
      padding-left: 0.5rem !important;
      background-color: rgba($lightslategray, 0.1);
      color: $white;
    }
  }
}
/* ... */

